workaround for "bash: Shellshock fix breaks bash function exporting" - https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=763164

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Description: Build chroot script for upgrading Tor on Anonymity Distributions
  .
  APT (timeout) options are supported through the apt_timeout_opts environment
  variable. Enabling an apt-cache is supported by using an exported
- apt_cache_maybe_enable bash function.
+ aptcachemaybeenable bash function.
  .
  This package is produced independently of, and carries no guarantee from,
  The Tor Project.
