--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Source: anon-shared-build-upgrade-torsocks
 Section: misc
 Priority: optional
 Maintainer: Patrick Schleizer <adrelanos@riseup.net>
-Build-Depends: debhelper (>= 9), faketime
+Build-Depends: debhelper (>= 9), faketime, genmkfile
 Homepage: https://github.com/Whonix/anon-shared-build-upgrade-torsocks
 Vcs-Browser: https://github.com/Whonix/anon-shared-build-upgrade-torsocks
 Vcs-Git: https://github.com/Whonix/anon-shared-build-upgrade-torsocks.git
