--- a/debian/control
+++ b/debian/control
@@ -20,8 +20,7 @@ Description: Build chroot script for upgrading Tor on Anonymity Distributions
  repository using /etc/apt/sources.list.d/torproject.list.
  .
  APT (timeout) options are supported through the apt_timeout_opts environment
- variable. Enabling an apt-cache is supported by using an exported
- aptcachemaybeenable bash function.
+ variable.
  .
  This package is produced independently of, and carries no guarantee from,
  The Tor Project.
